refactor: move structs to command
