# app/handler/tenant.go
@@ -4,44 +4,30 @@ import (
 	"net/http"
 
 	"github.com/sirupsen/logrus"
+	"github.com/thanhhaudev/openapi-go/app/command"
 	"github.com/thanhhaudev/openapi-go/app/config"
 	"github.com/thanhhaudev/openapi-go/app/repository"
 	"github.com/thanhhaudev/openapi-go/app/service"
 	"github.com/thanhhaudev/openapi-go/app/util"
 )
 
-type (
-	tenantHandler struct {
-		tenantService service.TenantService
-		logger        *logrus.Logger
-	}
-
-	AccessTokenRequest struct {
-		ApiKey    string `json:"api_key"`
-		ApiSecret string `json:"api_secret"`
-	}
-
-	ExchangeTokenRequest struct {
-		RefreshToken string `json:"refresh_token"`
-	}
-
-	RefreshTokenRequest struct {
-		AccessToken string `json:"access_token"`
-	}
-)
+type tenantHandler struct {
+	tenantService service.TenantService
+	logger        *logrus.Logger
+}
 
 // RefreshAccessToken	godoc
 // @Summary      		Retrieve a new access token
 // @Tags         		auth
 // @Accept       		json
 // @Produce      		json
-// @Param				request body RefreshTokenRequest true "request body"
+// @Param				request body command.RefreshTokenRequest true "request body"
 // @Success      		200  {object} map[string]interface{}
 // @Failure      		400  {object} error.AuthError
 // @Failure      		500  {object} error.AuthError
 // @Router       		/api/auth/refresh [post]
 func (t tenantHandler) RefreshAccessToken(w http.ResponseWriter, r *http.Request) {
-	p := RefreshTokenRequest{}
+	p := command.RefreshTokenRequest{}
 	err := util.Bind(r, &p)
 	if err != nil {
 		t.logger.WithError(err).Error("Failed to parse request body")
@@ -64,13 +50,13 @@ func (t tenantHandler) RefreshAccessToken(w http.ResponseWriter, r *http.Request
 // @Tags         	auth
 // @Accept       	json
 // @Produce      	json
-// @Param			request body ExchangeTokenRequest true "request body"
+// @Param			request body command.ExchangeTokenRequest true "request body"
 // @Success      	200  {object} map[string]interface{}
 // @Failure      	400  {object} error.AuthError
 // @Failure      	500  {object} error.AuthError
 // @Router       	/api/auth/exchange [post]
 func (t tenantHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
-	p := ExchangeTokenRequest{}
+	p := command.ExchangeTokenRequest{}
 	err := util.Bind(r, &p)
 	if err != nil {
 		t.logger.WithError(err).Error("Failed to parse request body")
@@ -93,13 +79,13 @@ func (t tenantHandler) GetAccessToken(w http.ResponseWriter, r *http.Request) {
 // @Tags         	auth
 // @Accept       	json
 // @Produce      	json
-// @Param			request body AccessTokenRequest true "request body"
+// @Param			request body command.AccessTokenRequest true "request body"
 // @Success      	200  {object} map[string]interface{}
 // @Failure      	400  {object} error.AuthError
 // @Failure      	500  {object} error.AuthError
 // @Router       	/api/auth/access [post]
 func (t tenantHandler) GetRefreshToken(w http.ResponseWriter, r *http.Request) {
-	p := AccessTokenRequest{}
+	p := command.AccessTokenRequest{}
 	err := util.Bind(r, &p)
 	if err != nil {
 		t.logger.WithError(err).Error("Failed to parse request body")
